--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vinit Sharma | Full-Stack Developer & Digital Craftsman</title>
+    <title>Vinit Sharma | Full-Stack & App Developer </title>
     <meta name="description" content="Portfolio of Vinit Sharma - Full-stack developer specializing in building elegant web systems. Explore experiments in code, design, and digital experiences." />
     <meta name="author" content="Vinit Sharma" />
     <meta name="keywords" content="full-stack developer, web developer, react developer, portfolio, vinit sharma" />
